# SWTOR_starships

./: CMakeLists.txt  README.md  SWTOR.sln  Transformable.h  Vector3.cpp  main.cpp  swtor_uml.drawio
Debug/: OpenGLEngine.ilk  SWTOR.ilk
Linking/Soil2/lib/: soil2-debug.lib  soil2.lib
OpenGLEngine/: Game.cpp  Game.h  GameObject.cpp  GameObject.h  Mesh.h  MeshRenderer.h  Model.h  OpenGLEngine.vcxproj  OpenGLEngine.vcxproj.filters  Scene.cpp  Scene.h  Skybox.h  SpaceScene.cpp  SpaceScene.h  Vector3.h  libs.h  main.cpp
OpenGLEngine/Debug/: vc142.idb
OpenGLEngine/Debug/SWTOR.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SWTOR.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/Components/: Camera.h  Collider.h  MeshCollider.h  Model.h  MouseController.h  PassivePresenter.h  PlayerMovementController.h  PlayerShootingController.h  Presenter.h  ShipMovementController.h  ShootingHandler.h  SphereCollider.h
src/Engine/: CollisionDetector.cpp  CollisionDetector.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Input.cpp  Light.h  Mesh.h  OBJLoader.h  Scene.cpp  Scene.h  SpaceScene.cpp  SpaceScene.h  Transformable.cpp  Transformable.h  Vector3.h
src/Model/: Army.cpp  Army.h  Bullet.cpp  Bullet.h  Damageable.cpp  Damageable.h  IUpdatable.h  Port.cpp  Port.h  Queue.cpp  Queue.h  Spawner.cpp  Spawner.h  Starship.cpp  Starship.h  Transformable.cpp  Transformable.h  Turret.cpp  Turret.h  TurretAim.h  TurretController.h  Vector3.cpp  Vector3.h  Weapon.cpp  Weapon.h
